syntax = "proto3";
package service;
import "userModel.proto";

option go_package = "./proto";

message UserRequest {
  string user_name = 1;
  string password = 2;
  string password_confirm = 3;
}

message UserDetailResponse {
  UserModel user_detail = 1;
  string message = 2;
  uint32 code = 3;
}

service UserService {
  rpc UserLogin(UserRequest) returns (UserDetailResponse);
  rpc UserRegister(UserRequest) returns (UserDetailResponse);
}